Fixed links on mobile

--- a/web/static/styles/components/link.scss
+++ b/web/static/styles/components/link.scss
@@ -17,6 +17,7 @@ a.link {
     position: absolute;
     content: attr(data-text);
     color: #000;
+    top: 0;
     left: 0;
     right: 0;
     margin-left: auto;
